# complete-restful-api-in-rust

./: Cargo.toml
src/: db.rs  dtos.rs  error.rs  main.rs  open_api.rs
src/handlers/: auth.rs  healthcheck.rs  mod.rs  users.rs
src/middleware/: auth.rs
src/utils/: password.rs  test_utils.rs
