[package]
name = "complete-restful-api-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
argon2 = "0.5.3"
async-trait = "0.1.88"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
openssl-probe = "0.1.6"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = [
    "tls-native-tls",
    "runtime-async-std",
    "postgres",
    "chrono",
    "uuid",
] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
